feat: restructure project for serverless deployment, update environment handling, and enhance Prisma integration

--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
   ],
   "license": "ISC",
   "author": "Md Shijan Ali",
-  "type": "module",
-  "main": "server.ts",
+  "main": "dist/server.js",
   "scripts": {
     "dev": "tsx watch src/server.ts",
-    "build": "tsc",
+    "start": "node dist/server.js",
+    "build": "prisma generate && tsc",
     "migrate": "npx prisma migrate dev",
     "generate": "npx prisma generate",
     "show:db": "npx prisma studio",
