--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "show:db": "npx prisma studio",
     "generate:auth": "npx @better-auth/cli generate",
     "seed:admin": "tsx src/script/seedAdmin.ts",
-    "build": "prisma generate && tsup src/index.ts --format esm --platform node --target node20 --outDir api --external pg-native",
+    "build": "prisma generate && tsc",
+    "build:vercel": "prisma generate && tsup src/index.ts --format esm --platform node --target node20 --outDir api --external pg-native",
     "postinstall": "prisma generate",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
