--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,25 @@
-DATABASE_URL=
-PORT=
-BETTER_AUTH_SECRET=
-BETTER_AUTH_URL=
-APP_URL=
-APP_USER=
-APP_PASSWORD=
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
+# Database Configuration
+DATABASE_URL=postgresql://user:password@host:port/database?schema=public
+
+# Server Configuration
+PORT=5050
+
+# Better Auth Configuration
+BETTER_AUTH_SECRET=your-super-secret-key-here-min-32-chars
+BETTER_AUTH_URL=https://your-backend-domain.onrender.com
+APP_URL=https://your-frontend-domain.netlify.app
+CLIENT_URL=https://your-frontend-domain.netlify.app
+
+# Email Configuration (Gmail SMTP)
+# IMPORTANT: Use Gmail App Password, NOT your regular Gmail password
+# How to generate App Password:
+# 1. Enable 2-Step Verification at https://myaccount.google.com/security
+# 2. Go to https://myaccount.google.com/apppasswords
+# 3. Create app password for "Mail"
+# 4. Use the 16-character password below
+APP_USER=your-email@gmail.com
+APP_PASSWORD=your-16-char-app-password
+
+# Optional: OAuth Configuration
+GOOGLE_CLIENT_ID=your-google-client-id.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=your-google-client-secret
