feat: update email configuration to prioritize Brevo integration and streamline email sending logic

--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,13 @@ BETTER_AUTH_URL=https://your-backend-domain.onrender.com
 APP_URL=https://your-frontend-domain.netlify.app
 CLIENT_URL=https://your-frontend-domain.netlify.app
 
-# Email Configuration (Gmail SMTP)
+# Email Configuration
+# OPTION 1: Brevo (Recommended for production - 300 emails/day FREE)
+# Get your API key from: https://app.brevo.com/settings/keys/api
+# Click "Generate a new API key" (starts with xkeysib-, NOT xsmtpsib-)
+BREVO_API_KEY=xkeysib-your-api-key-here
+
+# OPTION 2: Gmail SMTP (For local development only)
 # IMPORTANT: Use Gmail App Password, NOT your regular Gmail password
 # How to generate App Password:
 # 1. Enable 2-Step Verification at https://myaccount.google.com/security
