feat: integrate Resend for email delivery and update email sending logic

--- a/.env.example
+++ b/.env.example
@@ -11,12 +11,12 @@ APP_URL=https://your-frontend-domain.netlify.app
 CLIENT_URL=https://your-frontend-domain.netlify.app
 
 # Email Configuration
-# OPTION 1: Brevo (Recommended for production - 300 emails/day FREE)
-# Get your API key from: https://app.brevo.com/settings/keys/api
-# Click "Generate a new API key" (starts with xkeysib-, NOT xsmtpsib-)
-BREVO_API_KEY=xkeysib-your-api-key-here
+# OPTION 1: Resend (Recommended for production - 100 emails/day FREE)
+# Works on Render, Vercel, and all cloud platforms
+# Get your API key from: https://resend.com/api-keys (takes 2 minutes)
+RESEND_API_KEY=re_your_api_key_here
 
-# OPTION 2: Gmail SMTP (For local development only)
+# OPTION 2: Gmail SMTP (For local development only - BLOCKED on Render)
 # IMPORTANT: Use Gmail App Password, NOT your regular Gmail password
 # How to generate App Password:
 # 1. Enable 2-Step Verification at https://myaccount.google.com/security
