--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "express": "^5.2.1",
     "nodemailer": "^7.0.13",
     "pg": "^8.17.2",
+    "resend": "^6.9.2",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   },
