--- a/package.json
+++ b/package.json
@@ -35,12 +35,14 @@
     "@getbrevo/brevo": "^4.0.1",
     "@prisma/adapter-pg": "^7.3.0",
     "@prisma/client": "^7.3.0",
+    "axios": "^1.13.5",
     "better-auth": "^1.4.18",
     "cors": "^2.8.6",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "nodemailer": "^7.0.13",
     "pg": "^8.17.2",
+    "resend": "^6.9.2",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   },
